Testing the machine learning

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOn+HaN8+JuyqABl6BQXchj",
+      "authorship_tag": "ABX9TyMP5y37fAGxFRCTnZfMc6Ya",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "bnD3AghhHMAC"
       },
@@ -3677,7 +3677,7 @@
         "id": "VkjHAlpI8avO",
         "outputId": "068750fe-69d3-4aed-d5fc-b51603277b1b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3910,9 +3910,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NEZxpcMxVe0p",
-        "outputId": "08d53932-4369-4b65-d28c-1c54547c7f86"
+        "outputId": "ce72e999-b714-4223-ab49-069d4087d508"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3922,7 +3922,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 15
         }
       ]
     },
@@ -3968,9 +3968,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F6EWa2lLdA-u",
-        "outputId": "b760127c-5515-4fe6-9be4-a2ff633caad3"
+        "outputId": "6acd763a-263a-4fb7-90ba-ab1799f13190"
       },
-      "execution_count": 25,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3980,7 +3980,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 13
         }
       ]
     },
@@ -3990,6 +3990,7 @@
         "#Coefficient of variation\n",
         "import numpy as np\n",
         "import scipy\n",
+        "import scipy.stats\n",
         "\n",
         "odd_size_data = np.array([150,151,152,152,153,154,155,155,155])\n",
         "\n",
@@ -4007,16 +4008,16 @@
         "get_coefficient_variation(odd_size_data)\n",
         "'''\n",
         "#way 2\n",
-        "stats.variation(odd_size_data) * 100"
+        "scipy.stats.variation(odd_size_data) * 100"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q5k7UlXBgDkt",
-        "outputId": "9f7b7e40-fb1e-4037-da45-69820434c82a"
+        "outputId": "c7c13bef-aab8-4aff-8b69-da43b40f8ba0"
       },
-      "execution_count": 27,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4026,7 +4027,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 20
         }
       ]
     },
@@ -4069,22 +4070,10 @@
         "  result_forest.append(accuracy_score(y_test, random_forest.predict(X_test)))"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TGNDDC16uyCT",
-        "outputId": "ac28b5ac-7713-4ff0-a1db-efd2dd95a12f"
+        "id": "TGNDDC16uyCT"
       },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0.925, 0.925, 0.9325, 0.925, 0.92, 0.905, 0.9175, 0.9175, 0.9125, 0.9325, 0.9225, 0.9125, 0.935, 0.9175, 0.925, 0.9175, 0.9275, 0.92, 0.9325, 0.92, 0.93, 0.905, 0.9175, 0.9325, 0.9425, 0.9375, 0.94, 0.92, 0.935, 0.925]\n"
-          ]
-        }
-      ]
+      "execution_count": 2,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4096,9 +4085,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFmqQMRw0qoj",
-        "outputId": "718d208f-39b2-459b-9fcb-f8fa3e09f42a"
+        "outputId": "246aa630-b449-477e-9925-c54104db12e1"
       },
-      "execution_count": 34,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -4119,9 +4108,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7uK-qxGe03SV",
-        "outputId": "a14b315d-b41e-44d1-c5a3-f8833aff4c15"
+        "outputId": "ff2b496f-81d4-43a4-8b54-3072597da1ce"
       },
-      "execution_count": 35,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -4138,20 +4127,208 @@
         "print(result_forest)"
       ],
       "metadata": {
+        "id": "nCOu3fHT08Kq",
+        "outputId": "2c48591e-7bf9-4c0d-f21a-ff595a31543a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "nCOu3fHT08Kq",
-        "outputId": "65a13c37-dfc9-4b14-b4fd-68abaa2cfb54"
+        }
       },
-      "execution_count": 36,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[0.97, 0.99, 0.9725, 0.9925, 0.98, 0.985, 0.985, 0.9825, 0.975, 0.99, 0.9825, 0.9825, 0.9725, 0.985, 0.98, 0.975, 0.9875, 0.9825, 0.99, 0.9825, 0.9825, 0.9775, 0.9875, 0.9875, 0.9875, 0.995, 0.9925, 0.9825, 0.9925, 0.99]\n"
+            "[0.975, 0.99, 0.985, 0.995, 0.9825, 0.985, 0.9825, 0.98, 0.9775, 0.99, 0.985, 0.9775, 0.975, 0.985, 0.98, 0.975, 0.9875, 0.9825, 0.9925, 0.9875, 0.9825, 0.975, 0.985, 0.985, 0.99, 0.995, 0.9925, 0.9825, 0.99, 0.9875]\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result_naive_bayes = np.array(result_naive_bayes)\n",
+        "result_logistic = np.array(result_logistic)\n",
+        "result_forest = np.array(result_forest)\n",
+        "type(result_naive_bayes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "23gRrIJGkfaP",
+        "outputId": "e3d2e23e-0d05-4bba-8cc0-e7023345c52b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result_naive_bayes.mean(), result_logistic.mean(), result_forest.mean()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q016mC2Xk-B5",
+        "outputId": "c1484423-1555-431c-e3b8-6220d934cbe8"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.92425, 0.9145, 0.9844999999999999)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import scipy\n",
+        "scipy.stats.mode(result_naive_bayes), scipy.stats.mode(result_forest), scipy.stats.mode(result_logistic)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zyvmmuMgm1sa",
+        "outputId": "d0968deb-df05-4975-b0f5-1e717e101729"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(ModeResult(mode=array([0.9175]), count=array([5])),\n",
+              " ModeResult(mode=array([0.985]), count=array([6])),\n",
+              " ModeResult(mode=array([0.9075]), count=array([4])))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.median(result_logistic),np.median(result_forest),np.median(result_naive_bayes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8WSGFLDTozWt",
+        "outputId": "52ce08c4-4187-48f2-bf87-54be70f47719"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.9125, 0.985, 0.925)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.var(result_naive_bayes),np.var(result_forest),np.var(result_logistic)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WfrNgbSToYpH",
+        "outputId": "ef35295f-0cb6-4a6d-b07d-f0e65d4bb360"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8.756250000000001e-05, 3.3916666666666734e-05, 0.00020933333333333337)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.std(result_naive_bayes),np.std(result_forest),np.std(result_logistic),"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x3FIFn8XpmJ8",
+        "outputId": "31b236a2-3586-45e9-8a3a-a0b1e52e7db5"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.00935748363610645, 0.0058238017365520554, 0.014468356276140472)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scipy.stats.variation(result_naive_bayes) * 100, scipy.stats.variation(result_forest) * 100, scipy.stats.variation(result_logistic) * 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "btyQT4-5r87c",
+        "outputId": "41a29683-6bfd-4de9-e37a-2263ebfc992c"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1.0124407504578252, 0.5915491860388071, 1.5821056616884057)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     }
