--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOZDjGTdm+jFx+2hzBn1nUy",
+      "authorship_tag": "ABX9TyMUi/DEATCv/VxQFKW3UmSe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4539,6 +4539,50 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy.random.mtrand import standard_normal\n",
+        "#standard normal distribution\n",
+        "stand_normal_data = np.random.standard_normal(size = 1000)\n",
+        "\n",
+        "#Checking the min and max value\n",
+        "min(stand_normal_data), max(stand_normal_data)\n",
+        "\n",
+        "#Making the histograma\n",
+        "sns.distplot(stand_normal_data);\n",
+        "\n",
+        "#Checking the mean and standard deviation\n",
+        "stand_normal_data.mean(), np.std(stand_normal_data)\n",
+        "\n",
+        "#Using the heights of people to test\n",
+        "data = np.array([126. , 129.5, 133. , 133. , 136.5, 136.5, 140. , 140. , 140. ,\n",
+        "                  140. , 143.5, 143.5, 143.5, 143.5, 143.5, 143.5, 147. , 147. ,\n",
+        "                  147. , 147. , 147. , 147. , 147. , 150.5, 150.5, 150.5, 150.5,\n",
+        "                  150.5, 150.5, 150.5, 150.5, 154. , 154. , 154. , 154. , 154. ,\n",
+        "                  154. , 154. , 154. , 154. , 157.5, 157.5, 157.5, 157.5, 157.5,\n",
+        "                  157.5, 157.5, 157.5, 157.5, 157.5, 161. , 161. , 161. , 161. ,\n",
+        "                  161. , 161. , 161. , 161. , 161. , 161. , 164.5, 164.5, 164.5,\n",
+        "                  164.5, 164.5, 164.5, 164.5, 164.5, 164.5, 168. , 168. , 168. ,\n",
+        "                  168. , 168. , 168. , 168. , 168. , 171.5, 171.5, 171.5, 171.5,\n",
+        "                  171.5, 171.5, 171.5, 175. , 175. , 175. , 175. , 175. , 175. ,\n",
+        "                  178.5, 178.5, 178.5, 178.5, 182. , 182. , 185.5, 185.5, 189., 192.5])\n",
+        "\n",
+        "#mean\n",
+        "mean_data = data.mean()\n",
+        "#standard deviation\n",
+        "std_data = np.std(data)\n",
+        "#Z score\n",
+        "Z_data = (data - mean_data) / std_data\n",
+        "#Checking the mean and standard deviation\n",
+        "Z_data.mean(), np.std(Z_data)"
+      ],
+      "metadata": {
+        "id": "M8vtx0feJXJr"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
