--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMxspO7318LFvWFzR2OSxxS",
+      "authorship_tag": "ABX9TyPxVZPkaUqX6OhdOAuVsU5P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4640,6 +4640,22 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Gamma distribution\n",
+        "from scipy.stats import gamma\n",
+        "\n",
+        "gamma_data = gamma.rvs(a = 1, size = 1000)\n",
+        "#Plotting\n",
+        "sns.distplot(gamma_data)"
+      ],
+      "metadata": {
+        "id": "CxgCEghsX8E8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
