--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPxVZPkaUqX6OhdOAuVsU5P",
+      "authorship_tag": "ABX9TyPN0izKDN1ilMI8MxMP6pTP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4653,6 +4653,32 @@
       ],
       "metadata": {
         "id": "CxgCEghsX8E8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Exponential distribution\n",
+        "from scipy.stats import expon\n",
+        "\n",
+        "expon_datas = expon.rvs(size = 1000)\n",
+        "sns.distplot(expon_datas)"
+      ],
+      "metadata": {
+        "id": "UiRhYgdUa0_5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "7zObMwTVboLJ"
       },
       "execution_count": null,
       "outputs": []
