Continuous uniform distribution

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPN0izKDN1ilMI8MxMP6pTP",
+      "authorship_tag": "ABX9TyN4fIs8ac7gL3vVm/y7eSLl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4675,7 +4675,12 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Continuous uniform distribution\n",
+        "from scipy.stats import uniform\n",
+        "\n",
+        "uniform_data = uniform.rvs(size = 1000)\n",
+        "\n",
+        "sns.distplot(uniform_data)"
       ],
       "metadata": {
         "id": "7zObMwTVboLJ"
