--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeK4dT0tH5wGcmb8slh2lK",
+      "authorship_tag": "ABX9TyN3k+LzdcK9rGrPjQW+8X/7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4691,10 +4691,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Binomial distribution\n",
+        "#Bernoulli distribution\n",
         "from scipy.stats import bernoulli\n",
         "\n",
-        "bernoulli_data = bernoulli.rvs(size = 1000, p = 0.4)# p = rate of sucess, in this case is 40%\n",
+        "bernoulli_data = bernoulli.rvs(size = 1000, p = 0.4)# p = sucess rate, in this case is 40%\n",
         "bernoulli_data\n",
         "\n",
         "np.unique(bernoulli_data, return_counts=True)\n",
@@ -4742,6 +4742,22 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Binomial distribution\n",
+        "from scipy.stats import binom\n",
+        "\n",
+        "binomial_data = binom.rvs(size = 1000, n = 5, p = 0.3)#n is the numbers os variables, p is sucess rate\n",
+        "\n",
+        "np.unique(binomial_data, return_counts=True)"
+      ],
+      "metadata": {
+        "id": "PQmWTatLgqn1"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
