Bernoulli Naive Bayes

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrWe5tvOj6rHQ4HtWCd6sH",
+      "authorship_tag": "ABX9TyMvude+s3yOP7fLVS0X8Ao1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4811,6 +4811,59 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bernoulli Naive Bayes\n",
+        "import pandas as pd\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.naive_bayes import BernoulliNB\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "#Importing the data\n",
+        "dataset = pd.read_csv('census.csv')\n",
+        "\n",
+        "#Splitting the data\n",
+        "X = dataset['sex'].values #Pandas to numpy\n",
+        "\n",
+        "#Creating the labels\n",
+        "label_encoder = LabelEncoder()\n",
+        "X = label_encoder.fit_transform(X)\n",
+        "\n",
+        "#Converting to matrix\n",
+        "X = X.reshape(-1,1)\n",
+        "\n",
+        "y = dataset['income'].values\n",
+        "\n",
+        "bernoulli_naive_bayes = BernoulliNB()\n",
+        "bernoulli_naive_bayes.fit(X,y)\n",
+        "\n",
+        "predicts = bernoulli_naive_bayes.predict(X)\n",
+        "predicts, y #Comparaing the values\n",
+        "\n",
+        "accuracy_score(y, predicts)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R4LROfxqqtIS",
+        "outputId": "f4d336eb-c3bf-4cd7-a35d-f8aa3b2b089b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7591904425539756"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     }
