--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMvude+s3yOP7fLVS0X8Ao1",
+      "authorship_tag": "ABX9TyMJjXd7XFQgrzbHPCUvUE4O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4864,6 +4864,69 @@
           },
           "metadata": {},
           "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Multinomial Naive Bayes\n",
+        "import pandas as pd\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "#Importing the data-set\n",
+        "dataset = pd.read_csv('census.csv')\n",
+        "\n",
+        "#Creating the labels\n",
+        "label_encoder0 = LabelEncoder()\n",
+        "label_encoder1 = LabelEncoder()\n",
+        "label_encoder2 = LabelEncoder()\n",
+        "label_encoder3 = LabelEncoder()\n",
+        "label_encoder4 = LabelEncoder()\n",
+        "label_encoder5 = LabelEncoder()\n",
+        "label_encoder6 = LabelEncoder()\n",
+        "\n",
+        "#Categorical -> number\n",
+        "dataset['workclass'] = label_encoder0.fit_transform(dataset['workclass'])\n",
+        "dataset['education'] = label_encoder1.fit_transform(dataset['education'])\n",
+        "dataset['marital-status'] = label_encoder2.fit_transform(dataset['marital-status'])\n",
+        "dataset['occupation'] = label_encoder3.fit_transform(dataset['occupation'])\n",
+        "dataset['relationship'] = label_encoder4.fit_transform(dataset['relationship'])\n",
+        "dataset['race'] = label_encoder5.fit_transform(dataset['race'])\n",
+        "dataset['native-country'] = label_encoder6.fit_transform(dataset['native-country'])\n",
+        "\n",
+        "#Splitting the data\n",
+        "X = dataset.iloc[:, [1,3,5,6,7,8,13]].values\n",
+        "y = dataset['income'].values\n",
+        "\n",
+        "#Fitting the data\n",
+        "multi_naive_bayes = MultinomialNB()\n",
+        "multi_naive_bayes.fit(X, y)\n",
+        "\n",
+        "predict = multi_naive_bayes.predict(X)\n",
+        "\n",
+        "accuracy_score(y, predict)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RVetLZ2Oxi7m",
+        "outputId": "fb9ebdec-0ae7-481d-b681-fbb8867219a0"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7485949448727005"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     }
