k-NN with Z-score

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMJjXd7XFQgrzbHPCUvUE4O",
+      "authorship_tag": "ABX9TyPvte9iiEIIN1lMM71iUfjD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4927,6 +4927,78 @@
           },
           "metadata": {},
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#k-NN with Z-score\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "#Importing data\n",
+        "dataset = pd.read_csv('credit_data.csv')\n",
+        "#Removing the missing data\n",
+        "dataset.dropna(inplace = True)\n",
+        "\n",
+        "#without standardization\n",
+        "X = dataset.iloc[:,1:4].values\n",
+        "y = dataset['c#default'].values\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.2, stratify = y)\n",
+        "\n",
+        "np.mean(X_train[0]), np.median(X_train[0]), np.std(X_train[0])\n",
+        "np.mean(X_test[0]), np.median(X_test[0]), np.std(X_test[0])\n",
+        "\n",
+        "knn = KNeighborsClassifier()\n",
+        "knn.fit(X_train, y_train)\n",
+        "\n",
+        "predict = knn.predict(X_test)\n",
+        "\n",
+        "accuracy_score(y_test, predict)\n",
+        "\n",
+        "#with standardization\n",
+        "z_score_train = StandardScaler()\n",
+        "z_score_test = StandardScaler()\n",
+        "\n",
+        "X_train_s = z_score_train.fit_transform(X_train)\n",
+        "X_test_s = z_score_test.fit_transform(X_test)\n",
+        "\n",
+        "#Exploring the data\n",
+        "min(X_train_s[0]), max(X_train_s[0])\n",
+        "np.mean(X_train_s[0]), np.mean(X_train_s[0]), np.std(X_train_s[0])\n",
+        "np.mean(X_test_s[0]), np.mean(X_test_s[0]), np.std(X_test_s[0])\n",
+        "np.mean(X_train_s), np.mean(X_train_s), np.std(X_train_s)\n",
+        "np.mean(X_test_s), np.mean(X_test_s), np.std(X_test_s)\n",
+        "\n",
+        "knn = KNeighborsClassifier()\n",
+        "knn.fit(X_train_s, y_train)\n",
+        "predict = knn.predict(X_test_s)\n",
+        "accuracy_score(y_test, predict)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BArQ1R-d3xYs",
+        "outputId": "d3d1b41c-dc38-4e88-fdb8-3e20147ada88"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9825"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
         }
       ]
     }
