--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPvte9iiEIIN1lMM71iUfjD",
+      "authorship_tag": "ABX9TyMDhDY6U30vphEGD6thiW0f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4780,7 +4780,7 @@
         "id": "o7VwI0Mzmj28",
         "outputId": "689675c2-2f5e-43a2-cdbf-e9aee667e642"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4853,7 +4853,7 @@
         "id": "R4LROfxqqtIS",
         "outputId": "f4d336eb-c3bf-4cd7-a35d-f8aa3b2b089b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4916,7 +4916,7 @@
         "id": "RVetLZ2Oxi7m",
         "outputId": "fb9ebdec-0ae7-481d-b681-fbb8867219a0"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4988,7 +4988,7 @@
         "id": "BArQ1R-d3xYs",
         "outputId": "d3d1b41c-dc38-4e88-fdb8-3e20147ada88"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4999,6 +4999,73 @@
           },
           "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Skewed data\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.metrics import mean_absolute_error, r2_score\n",
+        "\n",
+        "dataset = pd.read_csv('house_prices.csv')\n",
+        "\n",
+        "#sns.distplot(dataset['price']);\n",
+        "#sns.distplot(dataset['sqft_living']);\n",
+        "\n",
+        "#Skewed Data\n",
+        "X = dataset['sqft_living'].values\n",
+        "X.shape # (21613,)\n",
+        "X = X.reshape(-1,1)\n",
+        "X.shape # (21613, 1)\n",
+        "\n",
+        "y = dataset['price'].values\n",
+        "\n",
+        "regression = LinearRegression()\n",
+        "regression.fit(X,y)\n",
+        "\n",
+        "predict = regression.predict(X)\n",
+        "predict\n",
+        "y\n",
+        "\n",
+        "mean_absolute_error(y, predict) #173688.2733595311\n",
+        "r2_score(y, predict) #0.4928532179037931\n",
+        "\n",
+        "#normalize data\n",
+        "X_new = np.log(X)\n",
+        "y_new = np.log(y)\n",
+        "\n",
+        "#sns.distplot(X_new)\n",
+        "#sns.distplot(y_new)\n",
+        "\n",
+        "regression = LinearRegression()\n",
+        "regression.fit(X_new, y_new)\n",
+        "predict = regression.predict(X_new)\n",
+        "mean_absolute_error(y_new, predict) # 0.314671784942507\n",
+        "r2_score(y_new, predict) # 0.45550706431577015"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Bu6DWwuljrUk",
+        "outputId": "a48f21a3-0e6f-48af-90b4-5866f76a2481"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.45550706431577015"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
         }
       ]
     }
