--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMDhDY6U30vphEGD6thiW0f",
+      "authorship_tag": "ABX9TyNshH/iFYH1iXuzLIjZtnXY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5068,6 +5068,127 @@
           "execution_count": 16
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Neural network\n",
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import initializers\n",
+        "\n",
+        "#Random normal\n",
+        "normal = initializers.RandomNormal()\n",
+        "normal_data = normal(shape=[1000])# 1000 random numbers\n",
+        "\n",
+        "np.mean(normal_data), np.std(normal_data) #exploring the data\n",
+        "\n",
+        "#Random uniform\n",
+        "uniform = initializers.RandomUniform()\n",
+        "uniform_data = uniform(shape=[1000])\n",
+        "\n",
+        "np.mean(uniform_data), np.std(uniform_data)\n",
+        "\n",
+        "#Glorot normal\n",
+        "normal_glorot = initializers.GlorotNormal()\n",
+        "glorot_normal_data = normal_glorot(shape=[1000])\n",
+        "np.mean(glorot_normal_data), np.std(glorot_normal_data)\n",
+        "\n",
+        "#Glorot uniform\n",
+        "uniform_glorot = initializers.GlorotUniform()\n",
+        "uniform_glorot_data = uniform_glorot(shape=[1000])\n",
+        "np.mean(uniform_glorot_data), np.std(uniform_glorot_data)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GeQSmQlXwokG",
+        "outputId": "51475584-2e5b-489b-f0e3-412256e4fdd4"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.0015419357, 0.031364977)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Normality test\n",
+        "from scipy.stats import skewnorm\n",
+        "from scipy.stats import norm\n",
+        "from statsmodels.graphics.gofplots import qqplot\n",
+        "import seaborn as sns\n",
+        "\n",
+        "normal_data = stats.norm.rvs(size = 1000)\n",
+        "not_normal_data = skewnorm.rvs(a = -10, size = 1000)\n",
+        "\n",
+        "#Histogram\n",
+        "#sns.distplot(normal_data)\n",
+        "\n",
+        "#Not normal\n",
+        "#sns.distplot(not_normal_data)\n",
+        "\n",
+        "#Quantile-quantile plot\n",
+        "#qqplot(normal_data, line = 's')\n",
+        "#qqplot(not_normal_data, line = 's');\n",
+        "\n",
+        "#Test of Shapiro-Wilk\n",
+        "from scipy.stats import shapiro\n",
+        "_, p = shapiro(normal_data)\n",
+        "alpha = 0.05 # 5% of distrust\n",
+        "\n",
+        "if p > alpha:\n",
+        "  print('Normal distribution')\n",
+        "else:\n",
+        "  print('Not normal distribution')\n",
+        "\n",
+        "_, p2 = shapiro(not_normal_data)\n",
+        "alpha = 0.05 # 5% of distrust\n",
+        "\n",
+        "if p2 > alpha:\n",
+        "  print('Normal distribution')\n",
+        "else:\n",
+        "  print('Not normal distribution')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Vm-6JcX5fB3",
+        "outputId": "6e35da4b-38b4-4657-8fef-ba828633b588"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normal distribution\n",
+            "Not normal distribution\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "DfSaiUO55CRn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
