--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNshH/iFYH1iXuzLIjZtnXY",
+      "authorship_tag": "ABX9TyO4iRQoxYP1Trz7JYYrsPKc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5055,7 +5055,7 @@
         "id": "Bu6DWwuljrUk",
         "outputId": "a48f21a3-0e6f-48af-90b4-5866f76a2481"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5106,7 +5106,7 @@
         "id": "GeQSmQlXwokG",
         "outputId": "51475584-2e5b-489b-f0e3-412256e4fdd4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5167,7 +5167,7 @@
         "id": "6Vm-6JcX5fB3",
         "outputId": "6e35da4b-38b4-4657-8fef-ba828633b588"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5182,13 +5182,45 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Permutation\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "import seaborn as sns\n",
+        "import math\n",
+        "\n",
+        "#Using factorial\n",
+        "math.factorial(3)\n",
+        "\n",
+        "#Permutation with subset, no repetition\n",
+        "#Event = 5\n",
+        "#sample space = 36\n",
+        "math.factorial(36) / math.factorial(36 -5 )\n",
+        "\n",
+        "#Permutation with subset, with repetition\n",
+        "#Event = 5\n",
+        "#sample space = 36\n",
+        "math.pow(36, 5)"
       ],
       "metadata": {
-        "id": "DfSaiUO55CRn"
+        "id": "DfSaiUO55CRn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "762e6761-67e3-46e1-cc58-6ddee829046b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "60466176.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     }
   ]
 }
