--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO4iRQoxYP1Trz7JYYrsPKc",
+      "authorship_tag": "ABX9TyMMfhUL7ZPqqODnQmesifaV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5185,7 +5185,6 @@
         "#Permutation\n",
         "import numpy as np\n",
         "from scipy import stats\n",
-        "import seaborn as sns\n",
         "import math\n",
         "\n",
         "#Using factorial\n",
@@ -5219,6 +5218,43 @@
           },
           "metadata": {},
           "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Combination\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "import math\n",
+        "\n",
+        "#Combination with no repeteition\n",
+        "# S = 6 and E = 2\n",
+        "math.factorial(6) / (math.factorial(2) * math.factorial(6-2))\n",
+        "\n",
+        "#Combination with repeteition\n",
+        "# S = 6 and E = 2\n",
+        "math.factorial(6+2-1) / (math.factorial(2) * math.factorial(6-1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C_1nUQqGkpFl",
+        "outputId": "62fa8951-0dfb-4f3c-c788-31118cb6f429"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "21.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     }
