Difference, Union, Intersection

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMfhUL7ZPqqODnQmesifaV",
+      "authorship_tag": "ABX9TyOzgQQeIHtRBQZ+Jf/GxFOU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5235,7 +5235,7 @@
         "\n",
         "#Combination with repeteition\n",
         "# S = 6 and E = 2\n",
-        "math.factorial(6+2-1) / (math.factorial(2) * math.factorial(6-1))"
+        "math.factorial(6+2-1) / (math.factorial(2) * math.factorial(6-1))\n"
       ],
       "metadata": {
         "colab": {
@@ -5255,6 +5255,51 @@
           },
           "metadata": {},
           "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Difference, Union, Intersection\n",
+        "import numpy as np\n",
+        "from scipy import stats\n",
+        "import math\n",
+        "\n",
+        "#Set a\n",
+        "a = (0,1,2,3,4,5,6,7)\n",
+        "#Set b\n",
+        "b = (0,2,4,6,8)\n",
+        "\n",
+        "#Intersection\n",
+        "set(a) and set(b)\n",
+        "set(a) & set(b) # {0, 2, 4, 6}\n",
+        "\n",
+        "#Union\n",
+        "set(a) | set(b)\n",
+        "set(a) or set(b) # {0, 1, 2, 3, 4, 5, 6, 7}\n",
+        "\n",
+        "#Difference\n",
+        "set(a).difference(set(b)) # {1, 3, 5, 7}"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IyJ7z3f0qRRL",
+        "outputId": "8c4cc672-a23d-4d5d-a539-4dedf4d710ed"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1, 3, 5, 7}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
