Probability and normal distribution

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOzgQQeIHtRBQZ+Jf/GxFOU",
+      "authorship_tag": "ABX9TyNMr5H4go3rcqtFBElOiNVZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5207,7 +5207,7 @@
         },
         "outputId": "762e6761-67e3-46e1-cc58-6ddee829046b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5244,7 +5244,7 @@
         "id": "C_1nUQqGkpFl",
         "outputId": "62fa8951-0dfb-4f3c-c788-31118cb6f429"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5289,7 +5289,7 @@
         "id": "IyJ7z3f0qRRL",
         "outputId": "8c4cc672-a23d-4d5d-a539-4dedf4d710ed"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5300,6 +5300,67 @@
           },
           "metadata": {},
           "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Probability and normal distribution\n",
+        "import numpy as np\n",
+        "import seaborn as sns\n",
+        "\n",
+        "#Normal distribution data\n",
+        "data = np.array([126. , 129.5, 133. , 133. , 136.5, 136.5, 140. , 140. , 140. ,\n",
+        "                  140. , 143.5, 143.5, 143.5, 143.5, 143.5, 143.5, 147. , 147. ,\n",
+        "                  147. , 147. , 147. , 147. , 147. , 150.5, 150.5, 150.5, 150.5,\n",
+        "                  150.5, 150.5, 150.5, 150.5, 154. , 154. , 154. , 154. , 154. ,\n",
+        "                  154. , 154. , 154. , 154. , 157.5, 157.5, 157.5, 157.5, 157.5,\n",
+        "                  157.5, 157.5, 157.5, 157.5, 157.5, 161. , 161. , 161. , 161. ,\n",
+        "                  161. , 161. , 161. , 161. , 161. , 161. , 164.5, 164.5, 164.5,\n",
+        "                  164.5, 164.5, 164.5, 164.5, 164.5, 164.5, 168. , 168. , 168. ,\n",
+        "                  168. , 168. , 168. , 168. , 168. , 171.5, 171.5, 171.5, 171.5,\n",
+        "                  171.5, 171.5, 171.5, 175. , 175. , 175. , 175. , 175. , 175. ,\n",
+        "                  178.5, 178.5, 178.5, 178.5, 182. , 182. , 185.5, 185.5, 189., 192.5])\n",
+        "\n",
+        "mean_data = np.mean(data) #159.25\n",
+        "standard_deviation_data = np.std(data) #13.65\n",
+        "\n",
+        "np.quantile(data, [0.25, 0.5, 0.75]) #[150.5 , 159.25, 168.  ]\n",
+        "\n",
+        "#Probability of selecting one person from Q1\n",
+        "Z_Q1 = (150.5 - mean_data) / standard_deviation_data # -0.641025641025641\n",
+        "Z_table_Q1 = 0.26109 # Value from z table using the value -0.6 and 0.04\n",
+        "\n",
+        "#Probability of selecting one person from Q3\n",
+        "Z_Q3 = (168 - mean_data) / standard_deviation_data # 0.641025641025641\n",
+        "Z_table_Q3 = 0.73891 #cumulative probability\n",
+        "Z_Q3 = 1 - 0.73891 #Z_Q3 = 0.26109000000000004\n",
+        "\n",
+        "#Selecting a person between Q2 and Q3\n",
+        "Q2_Q3_between = Z_table_Q3 - 0.5 #0.23890999999999996\n",
+        "\n",
+        "Q2_Q3_between = 1 - (Z_table_Q1 + Z_Q3) # 0.5221800000000001 - 1 = 0.4778199999999999\n",
+        "Q2_Q3_between"
+      ],
+      "metadata": {
+        "id": "AuioRiuasqb1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e526741-e332-4262-f3c9-a8dda564252c"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4778199999999999"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
         }
       ]
     }
