Probability and normal distribution with scipy

--- a/Fundamentals.ipynb
+++ b/Fundamentals.ipynb
@@ -6,7 +6,7 @@
       "name": "Cópia de Fundamentals.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNMr5H4go3rcqtFBElOiNVZ",
+      "authorship_tag": "ABX9TyMmzzjrX2Za3K1p15KTfsmE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5309,6 +5309,7 @@
         "#Probability and normal distribution\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
+        "from scipy.stats import norm\n",
         "\n",
         "#Normal distribution data\n",
         "data = np.array([126. , 129.5, 133. , 133. , 136.5, 136.5, 140. , 140. , 140. ,\n",
@@ -5341,26 +5342,36 @@
         "Q2_Q3_between = Z_table_Q3 - 0.5 #0.23890999999999996\n",
         "\n",
         "Q2_Q3_between = 1 - (Z_table_Q1 + Z_Q3) # 0.5221800000000001 - 1 = 0.4778199999999999\n",
-        "Q2_Q3_between"
+        "Q2_Q3_between\n",
+        "\n",
+        "#Using scipy\n",
+        "#Finding the Q1\n",
+        "norm.cdf(150.5, mean_data, standard_deviation_data) #0.26075301195608336\n",
+        "\n",
+        "#Finding the Q3\n",
+        "norm.sf(168, mean_data, standard_deviation_data) #0.26075301195608336\n",
+        "\n",
+        "#Between Q2 and Q3\n",
+        "norm.cdf(168, mean_data, standard_deviation_data) - norm.cdf(159.25, mean_data, standard_deviation_data) # 0.23924698804391664"
       ],
       "metadata": {
         "id": "AuioRiuasqb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e526741-e332-4262-f3c9-a8dda564252c"
+        "outputId": "1f187874-e7a0-4d08-c601-f64cbe8ec4df"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.4778199999999999"
+              "0.23924698804391664"
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 18
         }
       ]
     }
